examples/errors/label-in-org.spasm
org 0

dp_label:
   nop       ; dummy

org dp_label